# calamari

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  environment_dev.yml  environment_dev_cpu.yml  environment_dev_gpu.yml  environment_master.yml  environment_master_cpu.yml  environment_master_gpu.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  codeql.yml  python-publish.yml  python-test.yml
calamari/ocr/: __init__.py  codec.py  dataset.py  evaluator.py  predictor.py  trainer.py
calamari/ocr/backends/: __init__.py  factory.py  network_meta.py
calamari/ocr/backends/tensorflow_backend/: tensorflow_backend.py  tensorflow_model.py
calamari/ocr/data_processing/: __init__.py  center_normalizer.py  data_preprocessor.py  data_range_normalizer.py  default_data_preprocessor.py  final_preparation.py
calamari/ocr/text_processing/: __init__.py  basic_text_processors.py  default_text_postprocessor.py  default_text_preprocessor.py  text_processor.py  text_synchronizer.py
calamari/proto/: __init__.py  calamari.proto  calamari_pb2.py  converters.py
calamari/scripts/: eval.py  predict.py  resume_training.py  train.py
calamari/utils/: __init__.py
calamari_ocr/: __init__.py  version.py
calamari_ocr/ocr/: __init__.py  callbacks.py  checkpoint.py  codec.py  cross_fold.py  cross_fold_trainer.py  dataset.py  evaluator.py  line_generator.py  predictor.py  scenario.py  scenario_params.py  sequence_recognizer.py  trainer.py
calamari_ocr/ocr/augmentation/: __init__.py  data_augmenter.py  dataaugmentationparams.py
calamari_ocr/ocr/backends/: __init__.py  backend_interface.py  factory.py  model_interface.py  network_meta.py  scenario.py
calamari_ocr/ocr/backends/ctc_decoder/: ctc_decoder.py  ctcwordbeamsearchdecoder.py  default_ctc_decoder.py  fuzzy_ctc_decoder.py  token_passing_ctc_decoder.py
calamari_ocr/ocr/backends/dataset/: __init__.py  data.py  data_types.py  pipeline.py  preproc_pipeline.py
calamari_ocr/ocr/data_processing/: __init__.py  center_normalizer.py  data_preprocessor.py  data_range_normalizer.py  default_data_preprocessor.py  default_image_processors.py  final_preparation.py  scale_to_height_processor.py
calamari_ocr/ocr/dataset/: __init__.py  codec.py  data.py  dataset_factory.py  datasetype.py  extended_prediction_dataset.py  params.py  pipeline.py
calamari_ocr/ocr/datasets/: __init__.py  dataset.py  dataset_factory.py  datasetype.py  extended_prediction_dataset.py  file_dataset.py  input_dataset.py  queue_helper.py
calamari_ocr/ocr/migrations/: loadweights.py  renametensors.py  version2to3.py
calamari_ocr/ocr/model/: ensemblegraph.py  ensemblemodel.py  graph.py  model.py  params.py  votergraph.py  votermodel.py
calamari_ocr/ocr/predict/: params.py  predictor.py
calamari_ocr/ocr/savedmodel/: saved_model.py
calamari_ocr/ocr/text_generation/: text_generator.py
calamari_ocr/ocr/text_processing/: __init__.py  basic_text_processors.py  default_text_postprocessor.py  default_text_preprocessor.py  default_text_processor.py  str_to_char_list.py  text_normalizer.py  text_processor.py  text_regularizer.py
calamari_ocr/ocr/training/: cross_fold.py  cross_fold_trainer.py  params.py  pipeline_params.py  standalone_cross_fold_split_script.py  trainer.py  warmstart.py
calamari_ocr/ocr/voting/: __init__.py  adapter.py  confidence_voter.py  params.py  sequence_voter.py  voter.py
calamari_ocr/proto/: __init__.py  calamari.proto  calamari_pb2.py  converters.py  params.py
calamari_ocr/resources/: rulegroups.json
calamari_ocr/resources/networks/: deep3.json  def.json  htr+.json
calamari_ocr/resources/rulesets/: ligatures_consonantal.json  ligatures_vocal.json  punctuation.json  quotes.json  roman_digits.json  spaces.json  uvius.json  various.json
calamari_ocr/scripts/: apply_data_preprocessing.py  apply_text_preprocessing.py  apply_text_preprocssing.py  benchmark.py  compute_average_prediction_confidence.py  cross_fold_split.py  cross_fold_train.py  dataset_statistics.py  dataset_to_single_dir.py  dataset_viewer.py  ensemble.py  eval.py  experiment.py  experiment_cross_fold.py  experiment_eval.py  img_gt_pred_to_html.py  line_segmentation_ocropus.py  pred_to_json.py  predict.py  predict_and_eval.py  resume_training.py  split_dirs_to_train_eval.py  split_eval_train.py  split_to_folds.py  split_train_eval.py  tensorflow_rename_variables.py  train.py  train_from_params.py  train_legacy.py  update_checkpoint.py
calamari_ocr/test/: __init__.py  calamari_test_scenario.py  test_augmentation.py  test_command_line.py  test_cross_fold_train.py  test_data_pagexml.py  test_eval.py  test_model_migration.py  test_model_zoo.py  test_network_architectures.py  test_predict_and_eval.py  test_prediction.py  test_pretrained.py  test_resume_training.py  test_scripts.py  test_simple_train.py  test_train_abbyxml.py  test_train_abbyyxml.py  test_train_consistency.py  test_train_ensemble.py  test_train_file.py  test_train_file_no_preload.py  test_train_generated.py  test_train_hdf5.py  test_train_mixed_data.py  test_train_pagexml.py  test_validation_train.py
calamari_ocr/test/data/: .gitignore
calamari_ocr/test/models/: 0.ckpt.json  best.ckpt.h5  best.ckpt.json
calamari_ocr/test/processors/: test_text_regularizer.py
calamari_ocr/utils/: __init__.py  contextmanager.py  glob.py  image.py  multiprocessing.py  output_to_input_transformer.py  path.py  running_statistics.py
docs/: requirements.txt
docs/source/: calamari_ocr.ocr.dataset.rst  calamari_ocr.ocr.predict.rst  conf.py  doc.api-usage.rst  doc.command-line-usage.rst  doc.dataset-formats.rst  doc.install.rst  doc.predicting.rst  index.rst
resources/: preview.odg
(+219 files in other folders)
